<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/textColorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtNew"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="30dp"
                    android:clickable="false"
                    android:drawableStart="@drawable/add"
                    android:gravity="center"
                    android:text="@string/NewPassword"
                    android:textAlignment="center"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtGenerate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="30dp"
                    android:clickable="false"
                    android:drawableStart="@drawable/generate"
                    android:gravity="center"
                    android:text="@string/generatePassword"
                    android:textAlignment="center"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="30dp"
                    android:clickable="false"
                    android:drawableStart="@drawable/list"
                    android:gravity="center"
                    android:text="@string/passwords"
                    android:textAlignment="center"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/CopyRight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_margin="40dp"
                    android:gravity="bottom"
                    android:text="@string/copyright"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/main_menu" />

</androidx.drawerlayout.widget.DrawerLayout>